# StripchatRecorder

./: .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
backend/: Cargo.toml  build.rs
backend/src/: lib.rs  main.rs  server_mod.rs
backend/src/commands/: postprocess_cmd.rs  recording_cmd.rs  settings_cmd.rs  streamer_cmd.rs
backend/src/config/: settings.rs
backend/src/core/: emitter.rs  error.rs  logging.rs
desktop/: index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: App.vue  i18n.ts  main.ts
desktop/src-tauri/: Cargo.toml
docs/: custom-locale.en.md  custom-locale.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  i18n.ts  main.ts
modules/contact_sheet/: Cargo.toml
modules/filter_short/: Cargo.toml
modules/notify_discord/: Cargo.toml
modules/notify_discord/src/: main.rs
modules/notify_telegram/: Cargo.toml
modules/pp_utils/: Cargo.toml
scripts/: check.desktop.js  check.js  common.js  dev.desktop.js  dev.js  release.desktop.js  release.js
src/: App.vue  i18n.ts
src-tauri/: Cargo.toml  build.rs
src-tauri/src/: lib.rs
src/components/: NotifyLayer.vue  StreamerCard.vue
src/composables/: usePostprocess.ts  useRecordings.ts
src/lib/: api.ts
src/locales/: en-US.ts  zh-CN.ts
src/router/: index.ts
src/stores/: postprocess.ts  settings.ts  streamers.ts
src/views/: FinderView.vue  PostprocessView.vue  RecordingsView.vue  RelayView.vue  SettingsView.vue
(+92 files in other folders)
